sidebar overflow fix

--- a/packages/fakeyou.com/src/scss/site-refresh.scss
+++ b/packages/fakeyou.com/src/scss/site-refresh.scss
@@ -12,6 +12,19 @@ styles with important tags:
 // Once the rollout is complete, this outer wrapper class can be removed.
 
 .fakeyou-refresh {
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba($secondary, 1);
+    border-radius: 0.5rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: rgba($bg, 1) !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
   p {
     font-weight: 400;
     margin-bottom: 0;
